<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvSettingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_header"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLblSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSettingsHeader"
        android:text="@string/image_size_spinner_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvLblFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvLblSize"
        android:text="@string/color_filter_spinner_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvLblType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvLblFilter"
        android:text="@string/image_type_spinner_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spImgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLblFilter"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvLblSize"
        android:layout_toRightOf="@+id/tvLblSize"
        android:entries="@array/image_sizes_array" />

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLblFilter"
        android:layout_alignLeft="@+id/spImgSize"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvLblFilter"
        android:entries="@array/colors_array" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLblType"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvLblType"
        android:layout_toRightOf="@+id/tvLblType"
        android:entries="@array/image_types_array" />

    <TextView
        android:id="@+id/tvLblSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvLblType"
        android:text="@string/site_filter_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLblSite"
        android:layout_alignTop="@+id/tvLblSite"
        android:layout_toRightOf="@+id/tvLblSite"
        android:ems="10"
        android:hint="@string/hntSiteFilter" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_centerHorizontal="true"
        android:onClick="save"
        android:text="@string/btn_save" />

</RelativeLayout>
